idea/testData/multiplatform/duplicateExpectsWithStrongIncompatibility/right/right.kt
expect fun <!LINE_MARKER("descr='Has actuals in JVM'")!>foo<!><!NO_ACTUAL_FOR_EXPECT!>(x: Int)<!>: Int